# systeme_fidelisation_decentraliser_aptos

Move/: Voting.move
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  model.rs  services.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs
frontend/src/components/: account_form.rs  mod.rs  proposal_form.rs  reward_display.rs  vote_form.rs
