[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
aptos-core = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet", package = "aptos-sdk" }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "postgres"] }
argon2 = "0.5.3"
validator = "0.18.1"
actix-web = "4.0"
actix-rt = "2.5"
jsonwebtoken = "9.3.0"
